--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "foundation-sites": "^6.5.3",
     "swiper": "^4.5.0",
     "requirejs": "^2.3.6"
+  },
+  "scripts": {
+    "start": "gulp"
   }
 }
